[gd_scene load_steps=4 format=3 uid="uid://cu22s64sfamfy"]

[ext_resource type="Script" path="res://addons/HLNC/editor_plugin/RegisteredNetworkNodes.gd" id="1_wbm0a"]
[ext_resource type="Script" path="res://addons/HLNC/editor_plugin/realtime_monitor_tab.gd" id="2_cebl3"]
[ext_resource type="Script" path="res://addons/graph_2d/graph_2d.gd" id="3_5ngo6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabBar" type="TabContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -31.0

[node name="Settings" type="MarginContainer" parent="TabBar"]
layout_mode = 2

[node name="NetworkNodes" type="VFlowContainer" parent="TabBar/Settings"]
layout_mode = 2
script = ExtResource("1_wbm0a")

[node name="Title" type="RichTextLabel" parent="TabBar/Settings/NetworkNodes"]
custom_minimum_size = Vector2(320, 28)
layout_mode = 2
bbcode_enabled = true
text = "[center]Registered Network Scenes"

[node name="List" type="ItemList" parent="TabBar/Settings/NetworkNodes"]
custom_minimum_size = Vector2(200, 320)
layout_mode = 2

[node name="Buttons" type="HFlowContainer" parent="TabBar/Settings/NetworkNodes"]
layout_mode = 2

[node name="Refresh" type="Button" parent="TabBar/Settings/NetworkNodes/Buttons"]
layout_mode = 2
text = "Refresh List"

[node name="PopupMenu" type="PopupMenu" parent="TabBar/Settings/NetworkNodes"]
size = Vector2i(119, 100)
item_count = 1
item_0/text = "Show in FileSystem"
item_0/id = 0

[node name="RealtimeMonitor" type="MarginContainer" parent="TabBar" node_paths=PackedStringArray("bandwidth_graph", "tick_bandwidth_graph", "ping_graph")]
visible = false
layout_mode = 2
script = ExtResource("2_cebl3")
bandwidth_graph = NodePath("VFlow/HFlow/BandwidthGraph")
tick_bandwidth_graph = NodePath("VFlow/HFlow/TickBandwidthGraph")
ping_graph = NodePath("VFlow/PingGraph")

[node name="VFlow" type="VFlowContainer" parent="TabBar/RealtimeMonitor"]
layout_mode = 2

[node name="HFlow" type="HFlowContainer" parent="TabBar/RealtimeMonitor/VFlow"]
layout_mode = 2

[node name="BandwidthGraph" type="Control" parent="TabBar/RealtimeMonitor/VFlow/HFlow"]
custom_minimum_size = Vector2(360, 270)
layout_mode = 2
script = ExtResource("3_5ngo6")
x_label = "Seconds"
y_label = "Bytes"

[node name="TickBandwidthGraph" type="Control" parent="TabBar/RealtimeMonitor/VFlow/HFlow"]
custom_minimum_size = Vector2(360, 270)
layout_mode = 2
script = ExtResource("3_5ngo6")
x_label = "Seconds"
y_label = "Bytes"

[node name="PingGraph" type="Control" parent="TabBar/RealtimeMonitor/VFlow"]
custom_minimum_size = Vector2(360, 270)
layout_mode = 2
script = ExtResource("3_5ngo6")
x_label = "Time"
y_label = "Ping (ms)"

[connection signal="tab_changed" from="TabBar" to="TabBar" method="_on_tab_changed"]
[connection signal="item_clicked" from="TabBar/Settings/NetworkNodes/List" to="TabBar/Settings/NetworkNodes" method="_on_list_item_clicked"]
[connection signal="item_selected" from="TabBar/Settings/NetworkNodes/List" to="TabBar/Settings/NetworkNodes" method="_on_registered_network_nodes_item_selected"]
[connection signal="pressed" from="TabBar/Settings/NetworkNodes/Buttons/Refresh" to="TabBar/Settings/NetworkNodes" method="_on_refresh_pressed"]
[connection signal="id_pressed" from="TabBar/Settings/NetworkNodes/PopupMenu" to="TabBar/Settings/NetworkNodes" method="_on_popup_menu_id_pressed"]
